			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

13-Aug-2004
~~~~~~~~~~~
Set minimum width of toolbar so that all buttons are visible (Stephen Watson).

10-Aug-2004
~~~~~~~~~~~
When adding an entry to the Recently Visited menu, remove its parent directory.
This stops the list filling up with near-duplicates when you have deeply
nested directories (Thomas Leonard).

08-Aug-2004
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

05-Aug-2004
~~~~~~~~~~~
For debugging, show the failed URI when dragging to the pinboard (Thomas
Leonard).

03-Aug-2004
~~~~~~~~~~~
Use Help icon instead of Info icon for popup help buttons (Thomas Leonard).

02-Aug-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

01-Aug-2004 (Release 2.1.3)
~~~~~~~~~~~
Build in ROX-Filer/build, not ~/build/ROX-Filer.

30-Jul-2004
~~~~~~~~~~~
Renamed Cancel to Close in the Properties box (suggested by Arnaud Calvo).
Updated some calls to use newer APIs, and allow compilation on systems where
deprecated widgets are disabled by default (reported by Vincent Lefèvre and
Guido Schimmels).
Bugfix: Panel icons were no longer shown highlighted when selected.

23-Jul-2004
~~~~~~~~~~~
Bugfix: When opening a new directory with saved settings, the filer would
	print a warning and then crash.

21-Jul-2004
~~~~~~~~~~~
Changed email address given as the one to send bugs to when using
--help to the rox-devel list (Stephen Watson).
Thumbnail generation now handles files with UTF-8 characters (Anatoly
Asviyan). 

16-Jul-2004
~~~~~~~~~~~
Removed action window screenshot from manual to save space.

15-Jul-2004
~~~~~~~~~~~
Proper check for the stat[v]fs headers (Stephen Watson, reported by
Lucas Hazel).

13-Jul-2004
~~~~~~~~~~~
Added firefox to list of default browsers (suggested by eugene).

10-Jul-2004
~~~~~~~~~~~
Added Romanian translation (Cosma Florin).

01-Jul-2004
~~~~~~~~~~~
Can now set "Brief" option on the Copy and Move action windows (Stephen 
Watson).