@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+18-Aug-2004
+~~~~~~~~~~~
+Fix for the Solaris extended attribute support (Stephen Watson). 
+
 13-Aug-2004
 ~~~~~~~~~~~
 Set minimum width of toolbar so that all buttons are visible (Stephen Watson).
